// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the live bank (no quiz seed) > always answering a 1`] = `
[
  "bonjovi_britney",
  "hebrew_mix",
  "artzi_golan",
  "horror_comedy",
  "guitar_synth",
  "hits_gems",
  "fast_slow",
  "rain_sun",
  "fresh_timeless",
  "simple_complex",
]
`;

exports[`the live bank (no quiz seed) > always answering b 1`] = `
[
  "bonjovi_britney",
  "hebrew_mix",
  "heavy_smooth",
  "horror_comedy",
  "guitar_synth",
  "hits_gems",
  "simple_complex",
  "rain_sun",
  "fresh_timeless",
  "dancefloor_carcry",
]
`;
